@@ -45,3 +45,4 @@ Christophe Borivant
 Viper233: patch monitor edid
 Alexandre Bossot: oracle module
 Javier Barroso: VLAN interface on AIX
+Yves GUIMARD: download.pm patch for zip files
